k8s/gke/istio/istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reservation-istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reservation-ingress-virtual-services
spec:
  hosts:
  - "*"
  gateways:
  - reservation-istio-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: webgui-cluster-ip-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /web-gui/angular-gui
      route:
        - destination:
            host: webgui-cluster-ip-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-server
            port:
              number: 8080
